Create New From
Recreate new from
Rule Application and proposal Details From and rename 2 From

Application owner Info and layout Info

Minor Ui changes for change the tabs in projectdetailspage for creating new tabs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,3 +25,22 @@
   display: block;
   overflow-x: auto;
 }
+.css-19kzrtu {
+  padding: 10px !important;
+}
+
+.cust {
+  width: 300px;
+  height: auto;
+  min-height: 1.4375em;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  overflow: hidden;
+}
+.block {
+  display: block !important;
+}
+.tab-sty {
+  overflow: auto;
+  height: 478px;
+}
